[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-cli"
version = "0.1.0"
description = "Interactive CLI prompts for nested dataclasses."
readme = "README.md"
authors = [{ name = "Jan Ebel van Wijk", email = "jan86@posteo.de" }]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["dataclasses", "cli", "interactive", "input", "wizard"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/jdvanwijk/data-cli"
Repository = "https://github.com/jdvanwijk/data-cli"